[project]
name = "comfyui-spritefusion-pixel-snapper"
version = "0.1.1"
description = "ComfyUI custom node port of Sprite Fusion Pixel Snapper that snaps pixel art to a clean grid and quantized palette."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.3.5",
    "torch>=2.9.1",
]
authors = [
    { name = "x0x0b" },
    { name = "Hugo Duprez", comment = "Original algorithm (upstream)"},
]
keywords = [
    "comfyui",
    "pixel",
    "pixel-art",
    "grid-snap",
    "palette-quantization",
    "spritefusion",
    "image-processing"
]

[project.urls]
Repository = "https://github.com/x0x0b/ComfyUI-spritefusion-pixel-snapper"
Issues = "https://github.com/x0x0b/ComfyUI-spritefusion-pixel-snapper/issues"

[tool.comfy]
PublisherId = "x0x0b"
DisplayName = "SpriteFusion Pixel Snapper for ComfyUI"
Icon = "https://raw.githubusercontent.com/x0x0b/ComfyUI-spritefusion-pixel-snapper/main/icon.png"
